# exmex

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Readme.md
.github/workflows/: rust.yml  test.yml
benches/: benchmark.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: eval_str.rs  from_str.rs  parse_val.rs  parse_with_default_ops.rs  statements.rs
src/: data_type.rs  definitions.rs  expression.rs  lib.rs  main.rs  num.rs  operators.rs  parse.rs  parser.rs  result.rs  statements.rs  types.rs  util.rs  value.rs
src/expression/: calculate.rs  deep.rs  deep_details.rs  flat.rs  flat_details.rs  mod.rs  number_tracker.rs  partial.rs  partial_derivatives.rs  serde.rs
src/partial/: deep.rs  deep_details.rs  details.rs  differentiate_flat.rs  mod.rs  partial_derivatives.rs
tests/: core.rs  partial.rs  utils.rs  value.rs
