[package]
name = "exmex"
version = "0.18.0"  # check html document root in lib.rs
authors = ["Behrang Shafei <https://github.com/bertiqwerty>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/exmex"
description = "fast, simple, and extendable mathematical expression evaluator able to compute partial derivatives"
repository = "https://github.com/bertiqwerty/exmex/"
homepage = "https://github.com/bertiqwerty/exmex/"
readme = "README.md"
keywords = ["math", "parser", "expression", "eval", "differentiation"]
categories = ["parser-implementations", "science"]
include = ["**/*.rs", "Cargo.toml"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
regex = "1.9.5"
num = "0.4.1"
smallvec = "1.11.1"
lazy_static = "1.4.0"
serde = { version="1.0.188", optional = true }

[profile.test]
opt-level = 3

[profile.release]
debug = true

[features]
value = []
partial = []

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
rand = "0.8.5"
itertools = "0.11.0"
criterion = "0.5.1"
fasteval = "0.2.4"
rsc = "2.0.0"
evalexpr = "11.0.0"
serde_test = "1.0.176"
serde_json = "1.0.107"
toml = "0.8.0"

[[bench]]
name = "benchmark"
harness = false
