[package]
name = "exmex"
version = "0.20.3"  # check html document root in lib.rs
authors = ["Behrang Shafei <https://github.com/bertiqwerty>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/exmex"
description = "fast, simple, and extendable mathematical expression evaluator able to compute partial derivatives"
repository = "https://github.com/bertiqwerty/exmex/"
homepage = "https://github.com/bertiqwerty/exmex/"
readme = "README.md"
keywords = ["math", "parser", "expression", "eval", "differentiation"]
categories = ["parser-implementations", "science"]
include = ["**/*.rs", "Cargo.toml"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
regex = "1.11.1"
num = "0.4.3"
smallvec = "1.14.0"
lazy_static = "1.5.0"
serde = { version="1.0.219", optional = true }

[profile.test]
opt-level = 3

[profile.release]
debug = true

[features]
value = []
partial = []

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
rand = "0.9.0"
itertools = "0.14.0"
criterion = "0.5.1"
fasteval = "0.2.4"
evalexpr = "12.0.2"
serde_test = "1.0.177"
serde_json = "1.0.140"
toml = "0.8.20"

[[bench]]
name = "benchmark"
harness = false
